--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,21 @@ pom.xml.asc
 .lein-failures
 .nrepl-port
 .cpcache/
+/target
+/classes
+/checkouts
+profiles.clj
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+.clj-condo/.cache
+.lsp/.cache
+token
+.clj-kondo
+.calva
+
+scratch.clj
+db/
